--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,119 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: 38.143.66.99, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-5.11MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.40MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
-  - {name: 捷克-734.1KB/s(Youtube:不良林), server: v2cross.com.05.v2ce.com, port: 443, type: trojan, password: kGrwqmB1nEKUsDwE, sni: v2cross.com.05.v2ce.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇯🇵 日本-21.24MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-20.51MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.12MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.59MB/s(Youtube:不良林), server: 213.183.59.214, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇨🇳 中国-541.1KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
+  - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.07MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20714, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.10MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-514.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.13MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.03MB/s(Youtube:不良林), server: 134.195.196.64, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 捷克-734.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 捷克-734.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 捷克-734.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 捷克-734.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 捷克-734.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 捷克-734.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +133,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.11MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 捷克-734.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-21.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-20.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-541.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
