--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,71 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.83MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.41MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: hkaz3.xmrth-node.xyz, port: 14390, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz3.xmrth-node.xyz}}
-  - {name: 🇭🇰 香港-882.5KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20724, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.07MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20714, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.10MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-514.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.28MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1.13MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.03MB/s(Youtube:不良林), server: 134.195.196.64, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.35MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.52MB/s(Youtube:不良林), server: 104.160.43.43, port: 443, type: vmess, uuid: a307a6f7-b697-400e-bc7e-e6356de877c2, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /asdfaszzsdfa, ws-headers: {Host: 104.160.43.43}}
+  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 2256dea6-b952-43f7-b8a2-983f766d5836, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇺🇸 美国-3.83MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: e1bc2afe-eb31-11ec-ab34-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-882.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-882.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-882.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-882.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -77,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-882.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-882.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-882.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -133,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.83MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-882.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-514.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
