--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-405.8KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 18443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
-  - {name: 🇭🇰 香港-1.00MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-380.1KB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 18443, type: vmess, uuid: 2256dea6-b952-43f7-b8a2-983f766d5836, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
-  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 未知国家-1.39MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: f736834f-1fc8-4738-9884-9afe0eb0d818, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇺🇸 美国-3.83MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: e1bc2afe-eb31-11ec-ab34-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-350.1KB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-345.9KB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-386.2KB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-709.7KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 匈牙利-1.96MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.27MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 21005, type: ss, cipher: chacha20-ietf-poly1305, password: d80412a5-1757-48a5-b493-e2de1265cc11}
+  - {name: 🇨🇳 中国-7.17MB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 11001, type: ss, cipher: chacha20-ietf-poly1305, password: d80412a5-1757-48a5-b493-e2de1265cc11}
+  - {name: 🇺🇸 美国-3.29MB/s(Youtube:不良林), server: 97.64.28.52, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-405.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 未知国家-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
+      - 匈牙利-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-405.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 未知国家-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
+      - 匈牙利-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-405.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 未知国家-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
+      - 匈牙利-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-405.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 未知国家-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
+      - 匈牙利-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-405.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 未知国家-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
+      - 匈牙利-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-405.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 未知国家-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
+      - 匈牙利-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-405.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
-      - 未知国家-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-386.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-709.7KB/s(Youtube:不良林)
+      - 匈牙利-1.96MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
